@@ -10,6 +10,9 @@ Version 2.10
   derived context.
 - Added an `in` test that works like the in operator.  This can be used
   in combination with `reject` and `select`.
+- Added `previtem` and `nextitem` to loop contexts, providing access to the
+  previous/next item in the loop. If such an item does not exist, the value is
+  undefined.
 
 Version 2.9.6
 -------------
